# gotomemory

./: .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.changeset/: README.md
.claude/: launch.json
apps/cli/: package.json
apps/cli/src/: bin.ts  cli.test.ts  cli.ts  exit-codes.ts  index.test.ts  index.ts
apps/console/: index.html  package.json  tsconfig.json  turbo.json  vite.config.ts
apps/console/src/: App.tsx  console.test.ts  console.test.tsx  format.test.ts  index.css  main.ts  main.tsx  page-render.test.ts  ui.ts
apps/extension/: package.json  tsconfig.json  turbo.json  wxt.config.ts
apps/extension/entrypoints/: background.ts  chatgpt.content.ts  claude.content.ts  content.ts  gemini.content.ts
apps/extension/src/: config.ts  extension.test.ts  handlers.ts  inject.ts  manifest.test.ts  manifest.ts  messages.ts  mount.ts  (+5 more)
apps/gateway/: package.json
apps/mcp-server/: package.json
apps/share-server/: package.json
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: TESTING.md  implementation-checklist.md  manual-e2e-zh.md  share-pages-checklist.md
py/: pyproject.toml
py/sdk/: README.md  pyproject.toml
py/sdk/src/gotomemory/: __init__.py  client.py
py/sdk/tests/: test_client.py
py/tests/: test_sdk.py
scripts/: e2e-demo.sh
specs/: introduction.html  memory-sharing-system.md  monorepo-architecture.md  monorepo-guide.md  overview.html  share-pages-system.md
tooling/: dependency-cruiser.cjs
(+39 files in other folders)
