[project]
name = "gotomemory"
version = "0.0.0"
description = "Python SDK for gotomemory developer integrations"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.10.0", "pytest>=8.0.0", "ruff>=0.6.0"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["sdk/src/gotomemory"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
